003-10-13  Filip Navara  <xnavara@volny.cz>

	* include/commctrl.h: (DSA_*):Add prototypes, typedefs and
	defines for Dynamic Storage Arrays.
	(DPA_*): Likewise, for Dynamic Pointer Arrays.
	(FlatSB_*, InitializeFlatSB, InitializeFlatSB): Add prototypes
	and defines for Flat ScrollBars.
	(SetWindowSubclass, GetWindowSubclass, RemoveWindowSubclass,
	DefSubclassProc): Add prototypes for subclassing.
	(DrawShadowText) Add prototype.
`	(COMCTL32_VERSION): Define.

2003-10-13  Martin Fuchs  <Martin-Fuchs@gmx.net>

	* include/shlobj.h (CFSTR_FILENAME, CFSTR_FILEDESCRIPTOR,
	CFSTR_FILENAMEMAP, CFSTR_SHELLURL): Correct UNICODE definitions.

2003-10-13  Pierre Humblet  <pierre.humblet@ieee.org>

	* include/winnt.h (SM_REMOTESESSION): Add define.
	* include/winuser.h (SE_CREATE_GLOBAL_NAME): Ditto.

2003-10-13  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/wincrypt (KP_IV, KP_SALT, KP_PADDING, KP_MODE,
	KP_MODE_BITS, KP_PERMISSIONS, KP_ALGID, KP_BLOCKLEN): Remove
	duplicate definitions.
	(KP_X, KP_Y): Correct typos.

2003-10-11  Manu B  <manubee@users.sourceforge.net>

	* include/afxres.h: New file.

	* include/richedit.h (ES_NOOLEDRAGDROP, ENM_DRAGDROPDONE,
	ENM_IMECHANGE, ENM_LANGCHANGE, ENM_OBJECTPOSITIONS,
	ENM_SCROLLEVENTS): Add constants.

	* include/richedit.h (ES_SELECTIONBAR, ENM_LINK): Sort constants.

2003-10-09  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/errorep.h: New file.

	* lib/faultrep.def: New file.

2003-10-09  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/winbase.h (AddVectoredExceptionHandler): Define if
	_WIN32_WINNT >= 0x0500.

	* include/winnt.h (PVECTORED_EXCEPTION_HANDLER): Define if
	_WIN32_WINNT >= 0x0500.

2003-10-08  Corinna Vinschen  <corinna@vinschen.de>

	* include/winbase.h (AddVectoredExceptionHandler): Only define if
	_WIN32_WINNT >= 0x0501.

2003-10-07  Dimitri Papadopoulos  <papadopo@users.sourceforge.net>

	* include/winbase.h [_WIN32_WINNT >= 0x0500] (SetComputerNameEx[AW],