@@ -227,14 +227,7 @@ typedef DWORD FLONG;
 #define FILE_DELETE_CHILD		0x00000040
 #define FILE_READ_ATTRIBUTES		0x00000080
 #define FILE_WRITE_ATTRIBUTES		0x00000100
-			
-#define FILE_SUPERSEDED			0x00000000
-#define FILE_OPENED			0x00000001
-#define FILE_CREATED			0x00000002
-#define FILE_OVERWRITTEN		0x00000003
-#define FILE_EXISTS			0x00000004
-#define FILE_DOES_NOT_EXIST		0x00000005
-			
+
 #define FILE_SHARE_READ			0x00000001
 #define FILE_SHARE_WRITE		0x00000002
 #define FILE_SHARE_DELETE		0x00000004
